--- a/content/photos/demo.css
+++ b/content/photos/demo.css
@@ -3,7 +3,7 @@ html, body {
   font-family: 'Slabo 27px', serif;
   padding: 0;
   margin: 0;
-  background: #ffffff;
+  background: #FFC1E0;
 }
 
 /* line 8, ../sass/demo.scss */
